--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "matahho.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "matahho"
+  name             : "Mahdi Haji"
   pronouns         : # example: "she/her"  
   bio              : "Undergraduate Computer Engineering Student"
   location         : "Tehran"
