--- a/_config.yml
+++ b/_config.yml
@@ -228,6 +228,10 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  research:
+    output: true
+    permalink: /:collection/:path/
+    
 
 
 # These settings control how pages and collections are included in the site
@@ -286,6 +290,14 @@ defaults:
       author_profile: true
       share: true
 
+# _research
+  - scope:
+      path: ""
+      type: research
+    values:
+      layout: single
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
