--- a/_config.yml
+++ b/_config.yml
@@ -231,6 +231,9 @@ collections:
   research:
     output: true
     permalink: /:collection/:path/
+  work:
+    output: true
+    permalink: /:collection/:path/
     
 
 
@@ -298,6 +301,16 @@ defaults:
       layout: single
       author_profile: true
       share: true
+
+# _work
+  - scope:
+      path: ""
+      type: work
+    values:
+      layout: single
+      author_profile: true
+      share: true
+
 
 # Sass/SCSS
 sass:
