--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,8 +20,11 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
+  
+  - title: "Work"
+    url: /work/
         
   - title: "Blog Posts"
     url: /year-archive/
